<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="24sp"
        android:textColor="@color/tvAboutTitle"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="80sp"
        android:gravity="center">
    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_developer"
        android:textSize="20sp"
        android:textColor="@color/btnMainBackgrnd590"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="80sp"
        android:gravity="center">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_github"
        android:autoLink="web"
        android:textSize="20sp"
        android:textColorLink="@color/btnMainBackgrndEurojackpot"
        android:layout_marginTop="200sp"
        android:layout_marginBottom="80sp"
        android:gravity="center">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_www"
        android:autoLink="web"
        android:textSize="20sp"
        android:textColorLink="@color/btnMainBackgrndEurojackpot"
        android:layout_marginTop="270sp"
        android:layout_marginBottom="80sp"
        android:gravity="center">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_email"
        android:autoLink="email"
        android:textSize="20sp"
        android:textColorLink="@color/btnMainPressedStartColorLotteryStart"
        android:layout_marginTop="340sp"
        android:layout_marginBottom="80sp"
        android:gravity="center">
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vissza"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/button_about_back"
        android:textColor="@color/btnBackTextColor"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnAboutBack">
    </Button>

</RelativeLayout>